--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div style="float:left">
 <div align=center>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
 
@@ -98,9 +99,9 @@ autostart="1">
 
 <p><input type="button" value="ΕΑΕΠ Αθηνών" onclick="window.open(&#39;https://www.youtube.com/c/RadioChristianity/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/9eed1a5e/nikaia-church.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=300&#39;)" />
+<input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/660a31c5/eaep_nikaias.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=300&#39;)" />
  
-<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/5e9bc76a/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=600,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/5e9bc76a/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=630,height=400&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/98554e22/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=500,height=400&#39;)" />
 
@@ -108,13 +109,13 @@ autostart="1">
 
 <input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/cbce291e/eaep-rizoupoli.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=550,height=320&#39;)" />
+<input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/2068a044/eaep_rizoupolis.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=550,height=320&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;http://streaming.evangelized.net/youtube_peristeri.php&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=400&#39;)" />
 
 <p><input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://www.youtube.com/channel/UC5Vn3zA-RoBxmchuPVa9RNQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/9cd472a2/eaep-naxos.html&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=645,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://www.youtube.com/channel/UChE05fmTBXxHp4867xKDCTg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=645,height=400&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Ηλιούπολης" onclick="window.open(&#39;https://www.youtube.com/channel/UC3NGKgJgvRiHu4b0osTf-Lg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -159,24 +160,29 @@ autostart="1">
 <input type="button" value="Ε.Ε. Λάρισας" onclick="window.open(&#39;http://original.livestream.com/eeel&#39;,&#39;Ευαγγελική Εκκλησία Λάρισας&#39;,&#39;width=650,height=680&#39;)" />
 
 <input type="button" value="Ε.Ε. Δράμας" onclick="window.open(&#39;http://original.livestream.com/eeedramas&#39;,&#39;Ευαγγελική Εκκλησία Δράμας&#39;,&#39;width=650,height=680&#39;)" />
-
+<p>
 <p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://livestream.com/accounts/23202872/events/7200883/player?width=640&height=360&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false&#39;,&#39;Emmanuel TV&#39;,&#39;width=640,height=360&#39;)" />
 
-<input type="button" value="CBN TV" onclick="window.open(&#39;http://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=4932857782001&#39;,&#39;CBN&#39;,&#39;width=550,height=380&#39;)" />
+<input type="button" value="GOD TV US" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/70dcf412/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="TBN HD" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_HD.html&#39;,&#39;TBN HD&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/70dcf412/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a9230032/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="CBN TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/ecc1a72b/CBN_TV.html&#39;,&#39;CBN TV&#39;,&#39;width=580,height=335&#39;)" />
+
+<p><input type="button" value="TBN HD" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_HD.html&#39;,&#39;TBN HD&#39;,&#39;width=580,height=335&#39;)" />
 
 <input type="button" value="TBN UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_UK.html&#39;,&#39;TBN UK&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="Hillsong Church" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/Hillsong_Channel.html&#39;,&#39;Hillsong Channel&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Hillsong Channel" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/Hillsong_Channel.html&#39;,&#39;Hillsong Channel&#39;,&#39;width=580,height=335&#39;)" />
 
-<p><input type="button" value="Lakewood Church" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/bb71520a/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Spirit tv" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7b02cab6/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
-	
-</p></p></p></p></p></p></p></p></p></p></p></p></p></p>
-	
-</div>
+<input type="button" value="Lakewood Church" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/bb71520a/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=335&#39;)" />
+
+
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></div></div>
 
 <a href='http://www.vivlos.net/audio/vivlos/01 GENESH.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΓΕΝΕΣΗ</a>
 <a href='http://www.vivlos.net/audio/vivlos/02 EXODOS.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΕΞΟΔΟΣ</a>
