--- a/index.html
+++ b/index.html
@@ -159,12 +159,14 @@ autostart="1">
 <input type="button" value="Ε.Ε. Λάρισας" onclick="window.open(&#39;http://original.livestream.com/eeel&#39;,&#39;Ευαγγελική Εκκλησία Λάρισας&#39;,&#39;width=650,height=680&#39;)" />
 
 <input type="button" value="Ε.Ε. Δράμας" onclick="window.open(&#39;http://original.livestream.com/eeedramas&#39;,&#39;Ευαγγελική Εκκλησία Δράμας&#39;,&#39;width=650,height=680&#39;)" />
-<p>
+
+<p> . </p>
+
 <p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://livestream.com/accounts/23202872/events/7200883/player?width=640&height=360&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false&#39;,&#39;Emmanuel TV&#39;,&#39;width=640,height=360&#39;)" />
 
 <input type="button" value="GOD TV US" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/70dcf412/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/70dcf412/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/18556dcc/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=335&#39;)" />
 
 <input type="button" value="CBN NEWS" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a9230032/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=335&#39;)" />
 
@@ -180,6 +182,15 @@ autostart="1">
 
 <input type="button" value="Lakewood Church" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/bb71520a/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=335&#39;)" />
 
+<p><input type="button" value="CTN" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c3b9db1d/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="Daystar" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c3b9db1d/Daystar.html&#39;,&#39;Daystar&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="Bibel TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/3b92799f/Bibel%20_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="Bibel TV Impuls" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1a839ae2/Bibel_TV_Impuls.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="Bibel TV Musik" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1a839ae2/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=335&#39;)" />
 
 </p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></div></div>
 
