--- a/index.html
+++ b/index.html
@@ -160,31 +160,41 @@ autostart="1">
 
 <input type="button" value="Ε.Ε. Δράμας" onclick="window.open(&#39;http://original.livestream.com/eeedramas&#39;,&#39;Ευαγγελική Εκκλησία Δράμας&#39;,&#39;width=650,height=680&#39;)" />
 
-<p> . </p>
+<p> World Wide Christian Networks </p>
 
 <p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://livestream.com/accounts/23202872/events/7200883/player?width=640&height=360&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false&#39;,&#39;Emmanuel TV&#39;,&#39;width=640,height=360&#39;)" />
+
+<input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="GOD TV US" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/70dcf412/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=335&#39;)" />
 
 <input type="button" value="GOD TV UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/18556dcc/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a9230032/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=335&#39;)" />
-
-<input type="button" value="CBN TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/ecc1a72b/CBN_TV.html&#39;,&#39;CBN TV&#39;,&#39;width=580,height=335&#39;)" />
-
 <p><input type="button" value="TBN HD" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_HD.html&#39;,&#39;TBN HD&#39;,&#39;width=580,height=335&#39;)" />
 
 <input type="button" value="TBN UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_UK.html&#39;,&#39;TBN UK&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a9230032/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="CBN TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/ecc1a72b/CBN_TV.html&#39;,&#39;CBN TV&#39;,&#39;width=580,height=335&#39;)" />
 
 <input type="button" value="Hillsong Channel" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/Hillsong_Channel.html&#39;,&#39;Hillsong Channel&#39;,&#39;width=580,height=335&#39;)" />
 
 <input type="button" value="Spirit tv" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7b02cab6/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="Lakewood Church" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/bb71520a/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=335&#39;)" />
+<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c2e7b0f2/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="CTN" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c3b9db1d/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c37568ad/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="Daystar" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c3b9db1d/Daystar.html&#39;,&#39;Daystar&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Daystar Tv Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c3b9db1d/Daystar.html&#39;,&#39;Daystar&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="Lakewood" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/bb71520a/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=335&#39;)" />
+
+<p><input type="button" value="JUCE TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/427862a5/JUCE.html&#39;,&#39;JUCE TV&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="SALSA" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SALSA.html&#39;,&#39;SALSA&#39;,&#39;width=580,height=335&#39;)" />
+
+<input type="button" value="SMILE" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SMILE.html&#39;,&#39;SMILE&#39;,&#39;width=580,height=335&#39;)" />
 
 <input type="button" value="Bibel TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/3b92799f/Bibel%20_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=335&#39;)" />
 
@@ -192,7 +202,7 @@ autostart="1">
 
 <input type="button" value="Bibel TV Musik" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1a839ae2/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=335&#39;)" />
 
-</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></div></div>
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></div></div>
 
 <a href='http://www.vivlos.net/audio/vivlos/01 GENESH.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΓΕΝΕΣΗ</a>
 <a href='http://www.vivlos.net/audio/vivlos/02 EXODOS.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΕΞΟΔΟΣ</a>
