--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta charset=utf-8 />
 <div align=center>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
 
@@ -100,17 +101,17 @@ autostart="1">
 
 <input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/660a31c5/eaep_nikaias.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=300&#39;)" />
  
-<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/5e9bc76a/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=630,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/5e9bc76a/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=640,height=400&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/98554e22/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=500,height=400&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a1c6f440/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=630,height=400&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a1c6f440/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=640,height=400&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/2068a044/eaep_rizoupolis.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=550,height=320&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;http://streaming.evangelized.net/youtube_peristeri.php&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;https://www.youtube.com/channel/UCEDColQ1D2bulOQ7yNTcZzg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=400&#39;)" />
 
 <p><input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://www.youtube.com/channel/UC5Vn3zA-RoBxmchuPVa9RNQ/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -192,9 +193,9 @@ autostart="1">
 
 <p><input type="button" value="JUCE TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/427862a5/JUCE.html&#39;,&#39;JUCE TV&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="SALSA" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SALSA.html&#39;,&#39;SALSA&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Salsa" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SALSA.html&#39;,&#39;SALSA&#39;,&#39;width=580,height=335&#39;)" />
 
-<input type="button" value="SMILE" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SMILE.html&#39;,&#39;SMILE&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Smile" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SMILE.html&#39;,&#39;Smile&#39;,&#39;width=580,height=335&#39;)" />
 
 <input type="button" value="Bibel TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/3b92799f/Bibel%20_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=335&#39;)" />
 
