--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <meta charset=utf-8 />
+<div style="float:left">
 <div align=center>
 <iframe src="http://free.timeanddate.com/clock/i3czrg9v/n1428/tlgr17/fn17/tct/pct/tt0" frameborder="0" width="347" height="19" allowtransparency="true"></iframe>
 
@@ -26,8 +27,8 @@ autostart="1">
         <option value="" selected />:::::::::::::::::::::::::::::::::::::::::: Επιλέξτε κανάλι Tv/Radio ::::::::::::::::::::::::::::::::::::
 
         <option value="http://www.VoiceofGod.gr/streams/VoiceofGodHighGR.asx"/>01 TV Χριστιανικό Κανάλι Voice of God
-	    <option value="http://wm1.gmlogic.com/ch-patra"/>02 TV ΦΩΣ ΕΑΕΠ Πάτρας
-	    <option value="http://www.facp.org/Player/live.asx"/>04 TV FACP New York		   
+	<option value="http://wm1.gmlogic.com/ch-patra"/>02 TV ΦΩΣ ΕΑΕΠ Πάτρας
+	<option value="http://www.facp.org/Player/live.asx"/>04 TV FACP New York		   
         <option value="http://wm1.gmlogic.com/eaep"/>05 Radio Χριστιανισμός link I
         <option value="http://s1.fastcast4u.com:9326/listen.pls"/>05 Radio Χριστιανισμός link II
         <option value="http://37.59.14.8:9942"/>06 Radio ekxe.gr
@@ -38,10 +39,10 @@ autostart="1">
         <option value="mms://alfaomegaradio.no-ip.biz:3690"/>10 Radio TO ΑΛΦΑ ΚΑΙ ΤΟ ΩΜΕΓΑ 107,3 FM Κόρινθος
         <option value="http://live.Radioalphaomega.com:4008"/>11 Radio ALPHA OMEGA 90.4 MHz FM Χίος -48Kbps aacPlus-
         <option value="http://live.Radioalphaomega.com:4006"/>11 Radio ALPHA OMEGA 90.4 MHz FM Χίος -96Kbps mp3-
-	    <option value="http://83.170.89.19:9868/"/>12 Radio GodRadio
+	<option value="http://83.170.89.19:9868/"/>12 Radio GodRadio
         <option value="http://www.juststream.gr:8000/radio7.mp3"/>13 Radio 7 Χριστιανικό ραδιόφωνο
         <option value="http://s16.myradiostream.com:4132"/>14 Radio Το Φως Χ.Δ.Δ.Δ.Β
-		<option value="http://78.129.234.163:33743"/>15 Radio Χαρά
+	<option value="http://78.129.234.163:33743"/>15 Radio Χαρά
 
         <option value="" />===========WORLD WIDE CHRISTIAN CHANNELS============
         <option value="http://118965-lh.akamaihd.net/etv_live_500@74820?bandwidthEstimationTest=true&v=3.3.0&fp=WIN 15,0,0,189&r=LJPQX&g=UKIOCLKFRKBC"/>Emmanuel TV
@@ -58,6 +59,7 @@ autostart="1">
 </select><br />
 </p>
 </div>
+
 
 <p><a href="https://afreeapo.fastcast4u.com/" target="_blank" onclick="window.open(this.href, this.target, 'width=650, height=400, resizable=yes, location=yes'); return false;">| Χριστιανισμός 104,3 MHz FM Αθήνα|</a>
 
@@ -84,6 +86,10 @@ autostart="1">
 <!-- <a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>  -->
 
 <a href="https://cdn.rawgit.com/grchannels/data/87730a61/Radio%20Christianity%2090%20FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χριστιανισμός 90 MHz FM Ρόδος|</a>
+
+<p><input type="button" value="Αγία Γραφή -Σπύρος Φίλος-" onclick="window.open(&#39;http://www.bible.is/radio/GRKSFTN1DA?popout=1&#39;,&#39;Σπύρος Φίλος&#39;,&#39;width=450,height=320&#39;)" />
+
+   <input type="button" value="Αγία Γραφή -Αρχαίο 1904-" onclick="window.open(&#39;http://www.bible.is/radio/GRKEPTN1DA?popout=1&#39;,&#39;Αρχαίο 1904&#39;,&#39;width=450,height=320&#39;)" />
 
                                                         <!--"V    I    D    E    O    S" /> -->
 
@@ -161,49 +167,101 @@ autostart="1">
 
 <input type="button" value="Ε.Ε. Δράμας" onclick="window.open(&#39;http://original.livestream.com/eeedramas&#39;,&#39;Ευαγγελική Εκκλησία Δράμας&#39;,&#39;width=650,height=680&#39;)" />
 
+
 <p> World Wide Christian Networks </p>
+
 
 <p><input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://livestream.com/accounts/23202872/events/7200883/player?width=640&height=360&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false&#39;,&#39;Emmanuel TV&#39;,&#39;width=640,height=360&#39;)" />
 
 <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="GOD TV US" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/70dcf412/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="GOD TV US" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/70dcf412/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/18556dcc/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/18556dcc/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="TBN HD" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_HD.html&#39;,&#39;TBN HD&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="CYWN TV" onclick="window.open(&#39;http://www.lightcast.com/embed/player.php?id=14664&type=live&tvButtonID=worldchangers&ratio=16:10&autoStart=1&playlistPos=inside&playlistSize=100&skinColor=&width=550&height=380&#39;,&#39;CYWN&#39;,&#39;width=550,height=380&#39;)" />
 
-<input type="button" value="TBN UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_UK.html&#39;,&#39;TBN UK&#39;,&#39;width=580,height=335&#39;)" />
+<p><input type="button" value="TBN HD" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/TBN_HD.html&#39;,&#39;TBN HD&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a9230032/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="TBN UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1540745b/TBN_UK.html&#39;,&#39;TBN UK&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="CBN TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/ecc1a72b/CBN_TV.html&#39;,&#39;CBN TV&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a9230032/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Hillsong Channel" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/Hillsong_Channel.html&#39;,&#39;Hillsong Channel&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="CBN TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/ecc1a72b/CBN_TV.html&#39;,&#39;CBN TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Spirit tv" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7b02cab6/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Hillsong Channel" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7918d3d0/Hillsong_Channel.html&#39;,&#39;Hillsong Channel&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c2e7b0f2/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Spirit tv" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/df3f9206/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c37568ad/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=335&#39;)" />
+<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/17083810/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Daystar Tv Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/c3b9db1d/Daystar.html&#39;,&#39;Daystar&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/ba3d70b2/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Lakewood" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/bb71520a/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Daystar" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/59ea2f5d/Daystar.html&#39;,&#39;Daystar&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="JUCE TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/427862a5/JUCE.html&#39;,&#39;JUCE TV&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Lakewood Church" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7dbdb26d/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Salsa" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SALSA.html&#39;,&#39;SALSA&#39;,&#39;width=580,height=335&#39;)" />
+<p> <input type="button" value="Holy Spirit TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/78d75e0f/The_Holy_Spirit_TV.html&#39;,&#39;The Holy Spirit TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Smile" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SMILE.html&#39;,&#39;Smile&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="WCCI" onclick="window.open(&#39;https://swf.tulix.tv/iframe/wchangerslive/index.php&#39;,&#39;World Changers&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Bibel TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/3b92799f/Bibel%20_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="JUCE" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/427862a5/JUCE.html&#39;,&#39;JUCE TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Bibel TV Impuls" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1a839ae2/Bibel_TV_Impuls.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Salsa" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SALSA.html&#39;,&#39;SALSA&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Bibel TV Musik" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1a839ae2/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=335&#39;)" />
+<input type="button" value="Bibel" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/3b92799f/Bibel%20_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
-</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></div></div>
+<input type="button" value="Bibel Impuls" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1a839ae2/Bibel_TV_Impuls.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
+
+<input type="button" value="Bibel Musik" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1a839ae2/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
+
+
+
+<!--                                                       "  B      A      C      K      U      P  "                                        -->
+
+
+<!-- <input type="button" value="Smile" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/00fafe20/SMILE.html&#39;,&#39;Smile&#39;,&#39;width=580,height=350&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="CBN TV" onclick="window.open(&#39;http://www1.cbn.com/sites/all/libraries/html5player/html5player.php?applicationId=WIDGET_VOD&platform=embedded%20widget%20player&appName=embedded%20widget%20player&ads=true&auto_play=true&muted=false&videoId=4932857782001&#39;,&#39;CBN&#39;,&#39;width=550,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;http://streaming.evangelized.net/youtube_peristeri.php&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=400&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCYPyAh4PaRbaTTXwGP_XmzA/live?autoplay=1&#39;,&#39;Emmanuel TV UT&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=500,height=350&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/20636934/ArkofGod%20Tv.html&#39;,&#39;ArkofGod.TV&#39;,&#39;width=660,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="ΕΑΕΠ Νέου Ψυχικού" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/053c7882/eaep-neo_psixiko.html&#39;,&#39;ΕΑΕΠ Νέου Ψυχικού&#39;,&#39;width=640,height=400&#39;)" /> -->
+
+<!-- <input type="button" value="Radio CT" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=ct_radio&clip=&time=&showMoreVideos=false&hideInfo=true&autoPlay=true&lschannel=true&browseMode=false&textLines=2&hideChannelBranding=true&mode=false&allowchat=false&t=578146&#39;,&#39;Ράδιο Χριστιανική Αλήθεια&#39;,&#39;width=660,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="Web Tv Faros" onclick="window.open(&#39;http://cdn.livestream.com/grid/LSPlayer.swf?channel=webtvfaros&clip=&time=&color=0x006ccd&autoPlay=true&mute=false&iconColorOver=0xe4f2ff&iconColor=0xb5dcff&allowchat=false&height=314&width=222&#39;,&#39;Web Tv Faros&#39;,&#39;width=500,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" /> -->
+
+<!-- <input type="button" value="ArkofGod.TV" onclick="window.open(&#39;https://www.youtube.com/channel/UCzzl8hlH0hh1YHN9SOMkY0g/live?autoplay=1&#39;,&#39;ArkofGod.TV&#39;,&#39;width=750,height=350&#39;)" /> -->
+
+<!-- <input type="button" value="Emmanuel TV" onclick="window.open(&#39;http://emmanuel.tv/&#39;,&#39;Emmanuel TV&#39;,&#39;top=100,left=100,width=600,height=700&#39;)" /> -->
+
+<!-- <input type="button" value="Emmanuel TV -VLC Player-" onclick="window.open(&#39;http://118965-lh.akamaihd.net/etv_live_500@74820?bandwidthEstimationTest=true&v=3.3.0&fp=WIN 15,0,0,189&r=LJPQX&g=UKIOCLKFRKBC&#39;,&#39;Emmanuel TV&#39;,&#39;width=660,height=380&#39;)" /> -->
+
+<!-- <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://play.streamshark.io/r/l/boebvwyju/propheticchannelfinal/embed&#39;,&#39;Prophetic Channel&#39;,&#39;width=1220,height=760&#39;)" /> -->
+
+<!-- <a href="http://www.radio7.gr:8000/48kbps.m3u" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Radio7 |</a> -->
+
+<!-- <input type="button" value="Α & Ω (Ματθαίος Π.)" onclick="window.open(&#39;http://original.livestream.com/alfakaiomega&#39;)" /> -->
+
+<!-- <input type="button" value="Apokalipsi Web TV" onclick="window.open(&#39;http://www.ustream.tv/embed/12525740&#39;,&#39;Διαδικτυακή τηλεόραση - WEB TV&#39;,&#39;width=450,height=300&#39;)" /> -->
+
+<!--  <input type="button" value=" Radio Αποκάλυψη" onclick="window.open(&#39;http://original.livestream.com/newchannel/popoutplayer?channel=radioapokalipsi&#39;,&#39;Radio Αποκάλυψη&#39;,&#39;width=500,height=380&#39;)" />  -->
+</p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></p></div></div>
 
 <a href='http://www.vivlos.net/audio/vivlos/01 GENESH.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΓΕΝΕΣΗ</a>
 <a href='http://www.vivlos.net/audio/vivlos/02 EXODOS.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΕΞΟΔΟΣ</a>
