--- a/index.html
+++ b/index.html
@@ -60,32 +60,29 @@ autostart="1">
 </p>
 </div>
 
-
 <p><a href="http://afreeapo.fastcast4u.com/" target="_blank" onclick="window.open(this.href, this.target, 'width=650, height=400, resizable=yes, location=yes'); return false;">| Χριστιανισμός 104,3 MHz FM Αθήνα|</a>
 
 <a href="http://ekxeradio.gr/shoutcast/" target="_blank" onclick="window.open(this.href, this.target, 'top=0, left=0, height=240, width=550, resizable=yes, location=yes'); return false;">| Ράδιο EKXE |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
+<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Apokalipsi.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Αποκάλυψη |</a>
 
-<p><a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Alpha%20Omega%20Chios.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Άλφα Ωμέγα 90.4 MHz FM Χίος |</a>
+<p><a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Alpha Omega Chios.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Άλφα Ωμέγα 90.4 MHz FM Χίος |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Kanali%207%20Cyprus.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| KANALI 7 98.4 MHz FM Κύπρος |</a>
+<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Kanali 7 Cyprus.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| KANALI 7 98.4 MHz FM Κύπρος |</a>
 
-<p><a href="https://cdn.rawgit.com/grchannels/data/f4f14d4b/Diavlos%20Ena%2099.7%20FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Δίαυλος Ένα 99.7 FM Αρκαδία |</a>
+<p><a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Diavlos Ena 99.7 FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Δίαυλος Ένα 99.7 FM Αρκαδία |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/GODradio.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| GodRadio |</a>
+<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Oixalia.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/e11b365d/Radio%20Oixalia.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>
+<a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Christians-Rentis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χρ. Ρέντη |</a>
 
-<a href="https://cdn.rawgit.com/grchannels/data/460adddc/Radio%20Christians-Rentis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χρ. Ρέντη |</a>
+<p><a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/H Foni tis Agapis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Η Φωνή της Αγάπης |</a>
 
-<p><a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/H%20Foni%20tis%20Agapis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Η Φωνή της Αγάπης |</a>
-
-<a href="https://cdn.rawgit.com/grchannels/data/2812f73c/Radio%20to%20Fos.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Το Φως |</a>
+<a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/Radio to Fos.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Το Φως |</a>
 
 <!-- <a href="https://cdn.rawgit.com/grchannels/data/e53aeddd/Radio%20Xara.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Χαρά |</a>  -->
 
-<a href="https://cdn.rawgit.com/grchannels/data/87730a61/Radio%20Christianity%2090%20FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χριστιανισμός 90 MHz FM Ρόδος|</a>
+<a href="https://rawcdn.githack.com/grchannels/data/8984798489eb07897279c0b544d3e21030ef59be/Radio Christianity 90 FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χριστιανισμός 90 MHz FM Ρόδος|</a>
 
 <p><input type="button" value="Καινή Διαθήκη -Σπύρος Φίλος-" onclick="window.open(&#39;http://www.bible.is/radio/GRKSFTN1DA&#39;,&#39;Σπύρος Φίλος&#39;,&#39;width=500,height=530&#39;)" />
 
@@ -97,7 +94,7 @@ autostart="1">
 
 <input type="button" value="Voice of God" onclick="window.open(&#39;https://www.youtube.com/channel/UC8KnlXI3YAkOZfwMgxb1lOg/live?autoplay=1&#39;,&#39;Voice of God&#39;,&#39;width=530,height=550&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Χανίων" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/55f2989e/eaep-chania.html&#39;,&#39;ΕΑΕΠ Χανίων&#39;,&#39;width=650,height=390&#39;)" />
+<input type="button" value="ΕΑΕΠ Χανίων" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-chania.html&#39;,&#39;ΕΑΕΠ Χανίων&#39;,&#39;width=650,height=390&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Νάξος" onclick="window.open(&#39;https://www.youtube.com/channel/UChE05fmTBXxHp4867xKDCTg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Νάξος&#39;,&#39;width=645,height=400&#39;)" />
 
@@ -105,17 +102,17 @@ autostart="1">
 
 <p><input type="button" value="ΕΑΕΠ Αθηνών" onclick="window.open(&#39;https://www.youtube.com/c/RadioChristianity/live?autoplay=1&#39;,&#39;ΕΑΕΠ Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/660a31c5/eaep_nikaias.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=300&#39;)" />
+<input type="button" value="ΕΑΕΠ Νίκαιας" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep_nikaias.html&#39;,&#39;ΕΑΕΠ Νίκαιας II&#39;,&#39;width=500,height=300&#39;)" />
  
-<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/5e9bc76a/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=660,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Πειραιά" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-piraeus.html&#39;,&#39;ΕΑΕΠ Πειραιά II&#39;,&#39;width=660,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/98554e22/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=500,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Α. Παρασκευής" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-agiaparaskevi.html&#39;,&#39;ΕΑΕΠ Α. Παρασκευής II&#39;,&#39;width=500,height=400&#39;)" />
 
-<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a1c6f440/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=660,height=400&#39;)" />
+<p><input type="button" value="ΕΑΕΠ Καλλιθέας" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep-kalitheas.html&#39;,&#39;ΕΑΕΠ Καλλιθέας II&#39;,&#39;width=660,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/e53aeddd/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" />
+<input type="button" value="ΕΑΕΠ Ιλίου" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/ilion-church.html&#39;,&#39;ΕΑΕΠ Ιλίου Ι&#39;,&#39;width=520,height=400&#39;)" />
 
-<input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/2068a044/eaep_rizoupolis.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=550,height=320&#39;)" />
+<input type="button" value="ΕΑΕΠ Ριζούπολης" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/eaep_rizoupolis.html&#39;,&#39;ΕΑΕΠ Ριζούπολης&#39;,&#39;width=550,height=320&#39;)" />
 
 <input type="button" value="ΕΑΕΠ Περιστερίου" onclick="window.open(&#39;https://www.youtube.com/channel/UCEDColQ1D2bulOQ7yNTcZzg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Περιστερίου&#39;,&#39;width=580,height=400&#39;)" />
 
@@ -123,15 +120,19 @@ autostart="1">
 
 <input type="button" value="ΕΑΕΠ Ηλιούπολης" onclick="window.open(&#39;https://www.youtube.com/channel/UC3NGKgJgvRiHu4b0osTf-Lg/live?autoplay=1&#39;,&#39;ΕΑΕΠ Ηλιούπολης&#39;,&#39;width=550,height=480&#39;)" />
 
+<input type="button" value="ΕΑΕΠ Θέρμης" onclick="window.open(&#39;https://www.youtube.com/channel/UCCF4Iv4jCHWNleA7Dyi4QVA/live?autoplay=1&#39;,&#39;ΕΑΕΠ Θέρμης&#39;,&#39;width=530,height=550&#39;)" />
+
 <input type="button" value="Eκ. Θεσ/νίκης" onclick="window.open(&#39;https://www.youtube.com/channel/UCbbtMuQ-_Fwzl30ONKwvI2w/live?autoplay=1&#39;,&#39;The Christians&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="Εκ. Βέροιας" onclick="window.open(&#39;https://www.youtube.com/channel/UCbzHj-1cyPcmYFbk2oBnkVA/live?autoplay=1&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=550,height=480,top=100&#39;)" />
+<p><input type="button" value="Εκ. Βέροιας" onclick="window.open(&#39;https://www.youtube.com/channel/UCbzHj-1cyPcmYFbk2oBnkVA/live?autoplay=1&#39;,&#39;39;Ε. Βέροιας&#39;,&#39;width=550,height=480,top=100&#39;)" />
 
-<p><input type="button" value="Χρ. Εκ. Αθηνών" onclick="window.open(&#39;https://www.youtube.com/channel/UCoxKzreDVYLJ9iqzYmY1Vbg/live?autoplay=1&#39;,&#39;Χρ. Εκ. Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
+<input type="button" value="Χρ. Εκ. Αθηνών" onclick="window.open(&#39;https://www.youtube.com/channel/UCoxKzreDVYLJ9iqzYmY1Vbg/live?autoplay=1&#39;,&#39;Χρ. Εκ. Αθηνών&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="Απ. Εκ. του Χριστού" onclick="window.open(&#39;https://www.youtube.com/channel/UCi2K8nnMivwZDyl4GbpC_AQ/live?autoplay=1&#39;,&#39;Απ. Εκ. του Χριστού&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="Ελ. Χρ. Εκ." onclick="window.open(&#39;https://www.youtube.com/channel/UCmXznSE7o9WamWOUVtWGfZw/live?autoplay=1&#39;,&#39;39;Ελληνική Χριστιανική Εκκλησία.&#39;,&#39;width=550,height=450&#39;)" />
+
+<p><input type="button" value="Logos Church" onclick="window.open(&#39;https://www.youtube.com/channel/UC7zSdR2P29r-KSNnQASJfPA/live?autoplay=1&#39;,&#39;Logos Church&#39;,&#39;width=550,height=480&#39;)" />
 
 <input type="button" value="Apokalipsi WebTV" onclick="window.open(&#39;https://www.youtube.com/user/ApokalipsiWebTV/live?autoplay=1&#39;,&#39;Αποκάλυψη Web TV&#39;,&#39;width=550,height=480&#39;)" />
 
@@ -157,9 +158,9 @@ autostart="1">
 
 <input type="button" value="Prophetic Channel" onclick="window.open(&#39;https://www.youtube.com/channel/UCcbBHQXuSkw8Me1vnY-u4bw/live?autoplay=1&#39;,&#39;Prophetic Channel&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="GOD TV US" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/70dcf412/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="GOD TV US" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/GOD_TV_US.html&#39;,&#39;GOD TV US&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/18556dcc/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="GOD TV UK" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/GOD_TV_UK.html&#39;,&#39;GOD TV UK&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="CYWN Live" onclick="window.open(&#39;https://swf.tulix.tv/iframe/wchangerslive/index.php&#39;,&#39;World Changers&#39;,&#39;width=580,height=350&#39;)" />
 
@@ -167,23 +168,23 @@ autostart="1">
 
 <input type="button" value="TBN UK" onclick="window.open(&#39;https://watch.tbn.tv/videos/tbn-uk&#39;,&#39;TBN UK&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/a9230032/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="CBN NEWS" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CBN_NEWS.html&#39;,&#39;CBN NEWS&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="CBN TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/ecc1a72b/CBN_TV.html&#39;,&#39;CBN TV&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="CBN TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CBN_TV.html&#39;,&#39;CBN TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="Hillsong Channel" onclick="window.open(&#39;https://watch.tbn.tv/videos/hillsong-channel&#39;,&#39;Hillsong Channel&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="Spirit tv" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/df3f9206/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Spirit tv" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/spirit_tv.html&#39;,&#39;Spirit tv&#39;,&#39;width=580,height=350&#39;)" />
 
-<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/17083810/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=580,height=350&#39;)" />
+<p><input type="button" value="The Word Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/The_Word_Network.html&#39;,&#39;The Word Network&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/ba3d70b2/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Christian Tv Network" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/CTN.html&#39;,&#39;CTN&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Daystar" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/59ea2f5d/Daystar.html&#39;,&#39;Daystar&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Daystar" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/Daystar.html&#39;,&#39;Daystar&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Lakewood Church" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/7dbdb26d/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Lakewood Church" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/Lakewood_Church.html&#39;,&#39;Lakewood Church&#39;,&#39;width=580,height=350&#39;)" />
 
-<p> <input type="button" value="Holy Spirit TV" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/78d75e0f/The_Holy_Spirit_TV.html&#39;,&#39;The Holy Spirit TV&#39;,&#39;width=580,height=350&#39;)" />
+<p> <input type="button" value="Holy Spirit TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/abf2f385843d99385f0c44c98a1471b29b6b0a65/The_Holy_Spirit_TV.html&#39;,&#39;The Holy Spirit TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <input type="button" value="WCCI 24/7" onclick="window.open(&#39;http://www.lightcast.com/embed/player.php?id=14664&type=live&tvButtonID=worldchangers&ratio=16:9&autoStart=1&playlistPos=inside&playlistSize=100&skinColor=&width=600&height=380&#39;,&#39;CYWN&#39;,&#39;width=600,height=380&#39;)" />
 
@@ -191,11 +192,15 @@ autostart="1">
 
 <input type="button" value="Salsa" onclick="window.open(&#39;https://watch.tbn.tv/videos/salsa&#39;,&#39;SALSA&#39;,&#39;width=550,height=480&#39;)" />
 
-<input type="button" value="Bibel" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/3b92799f/Bibel%20_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Bibel" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/b18637a11040d6c5d508d3bc600b457b2547a75b/Bibel_TV.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Impuls" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1a839ae2/Bibel_TV_Impuls.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Impuls" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/b18637a11040d6c5d508d3bc600b457b2547a75b/Bibel_TV_Impuls.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
 
-<input type="button" value="Musik" onclick="window.open(&#39;https://cdn.rawgit.com/grchannels/data/1a839ae2/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
+<input type="button" value="Musik" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/b18637a11040d6c5d508d3bc600b457b2547a75b/Bibel_TV_Musik.html&#39;,&#39;Bibel TV&#39;,&#39;width=580,height=350&#39;)" />
+
+<p> <input type="button" value="Hungry Generation" onclick="window.open(&#39;https://www.youtube.com/channel/UCYcdUvf2OMAlFTIxZv2eduA/live?autoplay=1&#39;,&#39;Hungry Generation&#39;,&#39;width=480,height=400&#39;)" />
+
+<input type="button" value="Ark Of God TV" onclick="window.open(&#39;https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/ARK_OF_GOD_TV.html&#39;,&#39;Ark Of God TV&#39;,&#39;width=580,height=350&#39;)" />
 
 <a href='http://www.vivlos.net/audio/vivlos/01 GENESH.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΓΕΝΕΣΗ</a>
 <a href='http://www.vivlos.net/audio/vivlos/02 EXODOS.mp3' style='display:none;'> Π.Δ. -Δημοτική- ΕΞΟΔΟΣ</a>
