--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ autostart="1">
 
 <p><a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Diavlos Ena 99.7 FM.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Δίαυλος Ένα 99.7 FM Αρκαδία |</a>
 
+<a href="https://rawcdn.githack.com/grchannels/data/b321291c4737dbd74d56780450ef44c0be9805d0/Radio_Lyxnos.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Λύχνος |</a>
+
 <a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Oixalia.html" target="_blank" onclick="window.open(this.href, this.target, 'width=300, height=100, resizable=yes, location=yes'); return false;">| Ράδιο Οιχαλία |</a>
 
 <a href="https://rawcdn.githack.com/grchannels/data/fe615741e751d7e20397378383484a970c85337c/Radio Christians-Rentis.html" target="_blank" onclick="window.open(this.href, this.target, 'width=350, height=100, resizable=yes, location=yes'); return false;">| Χρ. Ρέντη |</a>
